@@ -318,3 +318,4 @@ suggestions:
   Dan Callahan
   Martin Strunz
   Kai HTML
+  Marc Richter
